# code-jam-template

./: .pre-commit-config.yaml  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements-dev.txt
.github/workflows/: lint.yaml
backend/: Dockerfile  Run-with-docker.txt  docker-compose.yml  requirements.txt
backend/core/: asgi.py  wsgi.py
backend/core/settings/: base.py  dev.py
backend/game/: consumers.py  routing.py
samples/: Pipfile  pyproject.toml
